# rare-bird-discord-api

./: .gitignore  CLAUDE.md  README.md  directions.md  main.py  pyproject.toml
apps/locate/: __init__.py  embeds.py  handlers.py  schemas.py  services.py  views.py
apps/search/: __init__.py  embeds.py  handlers.py  schemas.py  services.py
apps/targets/: __init__.py  handlers.py  region.py  services.py
core/: anthropic_client.py  config.py  dispatch.py  json_extract.py
tests/apps/locate/: test_embeds.py  test_handlers.py  test_register.py  test_services.py  test_views.py
tests/apps/search/: test_embeds.py  test_handlers.py  test_register.py  test_services.py
tests/apps/targets/: test_handlers.py  test_region.py  test_register.py  test_services.py
tests/core/: test_config.py  test_dispatch.py  test_json_extract.py
